# mymo2

./: Cargo.toml
mymo/: Cargo.toml
mymo/src/: error.rs  lib.rs
mymo/src/model/: age.rs  attribute.rs  character.rs  clade.rs  mod.rs  race.rs  skill.rs  weight.rs
predef/: skills.yaml
src/: app.rs  error.rs  id.rs  main.rs  storage.rs
src/components/: character.rs  mod.rs  propwrapper.rs
src/components/character/: ageslider.rs  attribute.rs  cladeeditor.rs  heightslider.rs  mod.rs  parents.rs  raceselect.rs  slider.rs  weigh.rs  weightslider.rs
src/components/character/skills/: branch.rs  mod.rs  skill.rs  tree.rs
src/components/character/stats/: mod.rs
src/containers/: automargin.rs  frame.rs  mod.rs
src/widgets/: mod.rs  race_button.rs  simple_image_button.rs
