[package]
name = "mymo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = { version = "2.4.2", features = ["serde"] }
indexmap = { version = "1.9.2", features = ["serde", "serde-1"] }
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
thiserror = "1.0.38"
